syntax = "proto3";

package protobuf;

message Empty {}

message ArticleID {
    uint32 id = 1;
}

message ArticleList {
    repeated Article articles = 1;
}

message Article {
    uint32 id = 1;
    string title = 2;
    string content = 3;
}

service Articles {
    rpc ListArticles (Empty) returns (ArticleList) {}
    rpc RetrieveArticle (ArticleID) returns (Article) {}
}